--- a/WebAppVSEAT/wwwroot/css/site.css
+++ b/WebAppVSEAT/wwwroot/css/site.css
@@ -1,16 +1,28 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+    
 }
+
+
 
 /* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
 }
+    
+a:hover {
+        color: aquamarine;
+        background-color: aquamarine;
+        border-radius: 7px;
+}
+
+
 
 .btn-primary {
   color: #fff;
@@ -19,10 +31,13 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+    background-color: dimgrey;
+    border-radius: 3px;
 }
+
 
 /* Sticky footer styles
 -------------------------------------------------- */
