--- a/WebAppVSEAT/Views/Home/Index.cshtml
+++ b/WebAppVSEAT/Views/Home/Index.cshtml
@@ -2,7 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<!--div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</!--div-->
+
+<div class="titre">
+    <h1>Bienvenue à VS Eats</h1>
+    <a href="#">Nous sommes Thomas et Daniel</a>
 </div>
