--- a/WebAppVSEAT/wwwroot/css/site.css
+++ b/WebAppVSEAT/wwwroot/css/site.css
@@ -2,6 +2,44 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 
+body
+{
+    background: url("/Images/Background.jpg");
+    height: 100vh;
+    background-size:cover;
+    background-position: center center;
+    position: relative;
+}
+
+
+.titre
+{
+    position: absolute;
+    width: 600px;
+    height: 300px;
+    margin: 20% 30%;
+    text-align: center;
+}
+
+.titre h1
+{
+    text-align: center;
+    color: #000000;
+    text-transform: uppercase;
+    font-size: 60px;
+}
+
+.titre a{
+    border: 1px solid #fff;
+    padding: 10px 25px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-top: 20px;
+    display: inline-block;
+      
+}
+
 a.navbar-brand {
     white-space: normal;
     text-align: center;
@@ -13,7 +51,7 @@ a.navbar-brand {
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: #0366d6;   
 }
     
 a:hover {
