--- a/WebAppVSEAT/Views/Restaurant/Details.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/Details.cshtml
@@ -39,7 +39,8 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Add", "Add", new { id = item.IDDISHES })
             </td>
         </tr>
 }
