--- a/WebAppVSEAT/Views/Restaurant/Index.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/Index.cshtml
@@ -1,11 +1,10 @@
-﻿@model IEnumerable<DTO.Restaurant>
+﻿@model IEnumerable<RestaurantVM>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>List Restaurant</h1>
-
+<h1>Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -14,10 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.IDRESTAURANT)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IDCITY)
+                @Html.DisplayNameFor(model => model.CITYNAME)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.NAMERESTAURANT)
@@ -29,28 +25,23 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IDRESTAURANT)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IDCITY)
-                </td>
-                <td>
-                    @Html.ActionLink(item.NAMERESTAURANT, "Details", new { id = item.IDRESTAURANT })
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ADDRESSRESTAURANT)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                </td>
-            </tr>
-
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CITYNAME)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NAMERESTAURANT)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ADDRESSRESTAURANT)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            </td>
+        </tr>
+}
     </tbody>
 </table>
-
