--- a/WebAppVSEAT/Views/Register/Index.cshtml
+++ b/WebAppVSEAT/Views/Register/Index.cshtml
@@ -20,11 +20,11 @@
                 </div>
                 <div class="mb-3">
                     <label class="col-form-label" asp-for="password">New Password</label>
-                    <input type="text" asp-for="password" class="form-control" />
+                    <input type="text" asp-for="password" type="password" class="form-control" />
                 </div>
                 <div class="mb-3">
                     <label class="col-form-label" asp-for="confirmerPassword">Confirm Password</label>
-                    <input type="text" asp-for="password" class="form-control" />
+                    <input type="text" asp-for="password" type="password" class="form-control" />
                 </div>
                 <div class="mb-3">
                     <button type="submit" class="btn">Sign-In</button>
