--- a/WebAppVSEAT/Views/Login/Index.cshtml
+++ b/WebAppVSEAT/Views/Login/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 <h1>Login</h1>
@@ -20,7 +21,7 @@
                 </div>
                 <div class="mb-3">
                     <label class="col-form-label" asp-for="password">Password</label>
-                    <input type="text" asp-for="password" class="form-control" />
+                    <input type="text" asp-for="password" type="password" class="form-control" />
                 </div>
                 <div class="mb-3">
                     <button type="submit" class="btn">Login</button>
