--- a/WebAppVSEAT/Views/Shared/_Layout.cshtml
+++ b/WebAppVSEAT/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/dishes.css" />
     <link rel="stylesheet" href="css/site.css" />
+    
 </head>
 <body>
     <header>
@@ -37,6 +38,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Register" asp-action="Index">Sign-In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Log out</a>
                         </li>
                     </ul>
                 </div>
