--- a/WebAppVSEAT/Views/Shared/_LayoutLogin.cshtml
+++ b/WebAppVSEAT/Views/Shared/_LayoutLogin.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Register" asp-action="Index">Sign-In</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="IndexStaff">Login Staff</a>
+                        </li>
                     </ul>
                 </div>
             </div>
