staff order list

--- a/WebAppVSEAT/Views/Login/IndexStaff.cshtml
+++ b/WebAppVSEAT/Views/Login/IndexStaff.cshtml
@@ -10,7 +10,7 @@
 <div class="container mt-5">
     <div class="row justify-content-center align-content-center">
         <div class="col-sm-12 col-md-12 col-lg-4">
-            <h1 class="mb-3">Register</h1>
+            <h1 class="mb-3">Login Staff</h1>
             <form method="post">
                 <div asp-validation-summary="All" class="text">
 
