--- a/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
+++ b/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
@@ -21,7 +21,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Historic" asp-action="Index">Historic</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Historic">Historic</a>
                         </li>
                     </ul>
                 </div>
