--- a/WebAppVSEAT/Views/Order/Index.cshtml
+++ b/WebAppVSEAT/Views/Order/Index.cshtml
@@ -17,19 +17,25 @@
                 @Html.DisplayNameFor(model => model.IDORDER)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IDDISTRICT)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IDRESTAURANT)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IDSTAFF)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IDCUSTOMER)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.TOTALPRICE)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NAME)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SURNAME)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ADDRESS)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CITY)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NPA)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PHONE)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DELIVERTIME)
@@ -47,19 +53,25 @@
                 @Html.DisplayFor(modelItem => item.IDORDER)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IDDISTRICT)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IDRESTAURANT)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IDSTAFF)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IDCUSTOMER)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.TOTALPRICE)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NAME)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SURNAME)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ADDRESS)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CITY)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NPA)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PHONE)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DELIVERTIME)
@@ -68,9 +80,8 @@
                 @Html.DisplayFor(modelItem => item.STATUS)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new {  id=item.IDORDER })
+               
             </td>
         </tr>
 }
