--- a/WebAppVSEAT/Views/Restaurant/TakeAnOrder.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/TakeAnOrder.cshtml
@@ -41,7 +41,7 @@
         }
         @Html.ActionLink("Order", "Order");
 
-        @*<select id="hoursMinutes"></select>
+        <select id="hoursMinutes"></select>
         
 
         <script>
@@ -66,7 +66,7 @@
 
             
             
-        </script>*@
+        </script>
 
 
         <label for="appt">Choose a time for your delivery</label>
