--- a/WebAppVSEAT/Views/Restaurant/Index.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/Index.cshtml
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.CITYNAME)
             </td>
             <td>
-                @Html.ActionLink(item.NAMERESTAURANT, "Details2", new { id=item.IDRESTAURANT })
+                @Html.ActionLink(item.NAMERESTAURANT, "Details", new { id=item.IDRESTAURANT })
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ADDRESSRESTAURANT)
