--- a/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
+++ b/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
@@ -6,13 +6,13 @@
     <title>@ViewData["Title"] - WebApp  </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/dishes.css" />
-    <link rel="stylesheet" href="css/site.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <img src="Images/eat.jpg" class="eat_Image" alt="eat" style="position:relative; width:100px;">
+                <img src="~/Images/eat.jpg" class="eat_Image" alt="eat" style="position:relative; width:100px;">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebAppVSEAT</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -22,6 +22,12 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Historic">Historic</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Log out</a>
                         </li>
                     </ul>
                 </div>
