Cancel order error message

--- a/WebAppVSEAT/Views/Order/CancelOrderID.cshtml
+++ b/WebAppVSEAT/Views/Order/CancelOrderID.cshtml
@@ -1,11 +1,8 @@
 ﻿@model WebAppVSEAT.Models.CancelOrderVM
 
 @{
-    ViewData["Title"] = "CancelOrder";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "CancelOrderID";
 }
-
-<h1>Cancel Order</h1>
 
 <hr />
 <div class="row">
