--- a/WebAppVSEAT/Views/Restaurant/TakeAnOrderConfirmation.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/TakeAnOrderConfirmation.cshtml
@@ -53,11 +53,11 @@
     <tfoot>
         <tr>
             <td colspan="3"><span style='font-weight:bold;'>total of this order :</span></td>
-            <td><span style='font-weight:bold;'>@sommeTotal</span></td>
+            <td><span style='font-weight:bold;'>@sommeTotal</span> CHF</td>
         </tr>
     </tfoot>
 </table>
 
-<h2> your order will be delivered at @Model.hour</h2>
-<h2> your order number is : @Model.IDORDER</h2>
+<h4> your order will be delivered at @Model.hour</h4>
+<h4> your order number is : @Model.IDORDER</h4>
 
