Customer edit information

--- a/WebAppVSEAT/Views/Shared/_Layout.cshtml
+++ b/WebAppVSEAT/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <img src="Images/eat.jpg" class="eat_Image" alt="eat" style="position:relative; width:100px;">
+                <img src="~/Images/eat.jpg" class="eat_Image" alt="eat" style="position:relative; width:100px;">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebAppVSEAT</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
