--- a/WebAppVSEAT/Views/Customer/Index.cshtml
+++ b/WebAppVSEAT/Views/Customer/Index.cshtml
@@ -4,23 +4,22 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
 <div>
-    <h4>CustomerVM</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IDCUSTOMER)
+            @Html.HiddenFor(model => model.IDCUSTOMER)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IDCUSTOMER)
+            @Html.HiddenFor(model => model.IDCUSTOMER)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IDCITY)
+            @Html.HiddenFor(model => model.IDCITY)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IDCITY)
+            @Html.HiddenFor(model => model.IDCITY)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NAME)
@@ -53,20 +52,19 @@
             @Html.DisplayFor(model => model.ADDRESS)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CITYNAME)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CITYNAME)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MAIL)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MAIL)
         </dd>
-        @*<dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PASSWORD)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PASSWORD)
-        </dd>*@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    @Html.ActionLink("Edit", "Edit")
 </div>
