ajout bouton dans login customer avec possibilité de créer un compte

--- a/WebAppVSEAT/Views/Login/Index.cshtml
+++ b/WebAppVSEAT/Views/Login/Index.cshtml
@@ -4,13 +4,14 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
-
-<h1>Login</h1>
+<div>
+    @Html.ActionLink("Create an account", "CreateCustomer", new { /* id = Model.PrimaryKey */ })
+</div>
+<hr />
 
 <div class="container mt-5">
     <div class="row justify-content-center align-content-center">
         <div class="col-sm-12 col-md-12 col-lg-4">
-            <h1 class="mb-3">Login Customer</h1>
             <form method="post">
                 <div asp-validation-summary="All" class="text">
 
