--- a/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
+++ b/WebAppVSEAT/Views/Shared/_LayoutOrder.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Log out</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Staff" asp-action="Profile">Profile</a>
+                        </li>
                     </ul>
                 </div>
             </div>
