--- a/WebAppVSEAT/wwwroot/css/site.css
+++ b/WebAppVSEAT/wwwroot/css/site.css
@@ -126,8 +126,9 @@ body {
     bottom: 0;
 }
 
+/*
 .container {
     padding: 25px;
     background-color: darkseagreen;
     border-radius: 7px;
-}   
+}*/   
