--- a/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
+++ b/WebAppVSEAT/Views/Login/CreateCustomer.cshtml
@@ -7,46 +7,51 @@
 
 
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="CreateCustomer">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="NAME" class="control-label"></label>
-                <input asp-for="NAME" class="form-control" />
-                <span asp-validation-for="NAME" class="text-danger"></span>
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <div class="h2LogIn active">Create Customer</div>
+        <div class="row justify-content-center align-content-center">
+            <div class="col-sm-12 col-md-12 col-lg-4">
+                <form asp-action="CreateCustomer">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="NAME" class="control-label"></label>
+                        <input type="text" asp-for="NAME" class="form-control fadeIn second" placeholder="name" />
+                        <span asp-validation-for="NAME" class="text-danger fadeIn second"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="SURNAME" class="control-label"></label>
+                        <input type="text" asp-for="SURNAME" class="form-control fadeIn second" placeholder="surname" />
+                        <span asp-validation-for="SURNAME" class="text-danger fadeIn second"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CITYNAME" class="control-label"></label>
+                        <input type="text" asp-for="CITYNAME" class="form-control fadeIn second" placeholder="city" />
+                        <span asp-validation-for="CITYNAME" class="text-danger fadeIn second"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="MAIL" class="control-label"></label>
+                        <input type="text" asp-for="MAIL" class="form-control fadeIn second" placeholder="mail" />
+                        <span asp-validation-for="MAIL" class="text-danger fadeIn second"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="PASSWORD" class="control-label"></label>
+                        <input type="password" asp-for="PASSWORD" class="form-control fadeIn second" placeholder="password" />
+                        <span asp-validation-for="PASSWORD" class="text-danger fadeIn second"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" class="fadeIn fourth" value="Create" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="SURNAME" class="control-label"></label>
-                <input asp-for="SURNAME" class="form-control" />
-                <span asp-validation-for="SURNAME" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CITYNAME" class="control-label"></label>
-                <input asp-for="CITYNAME" class="form-control" />
-                <span asp-validation-for="CITYNAME" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MAIL" class="control-label"></label>
-                <input asp-for="MAIL" class="form-control" />
-                <span asp-validation-for="MAIL" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PASSWORD" class="control-label"></label>
-                <input asp-for="PASSWORD" class="form-control" />
-                <span asp-validation-for="PASSWORD" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
+     </div>
+ </div>
+
+    <div>
+        <a asp-action="Index">Back to List</a>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
