--- a/WebAppVSEAT/Views/Login/Index.cshtml
+++ b/WebAppVSEAT/Views/Login/Index.cshtml
@@ -4,39 +4,37 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
-<div>
-    @Html.ActionLink("Create an account", "CreateCustomer", new { /* id = Model.PrimaryKey */ })
-</div>
 <hr />
 <div class="wrapper fadeInDown">
     <div id="formContent">
-        <h2 class="active">Log in</h2>
-        <h2 class="inactive underlineHover">Register</h2>
-        <div class="container mt-5">
-            <div class="row justify-content-center align-content-center">
-                <div class="col-sm-12 col-md-12 col-lg-4">
-                    <form method="post">
-                        <div asp-validation-summary="All" class="text">
+        <div class="h2LogIn active">Log in</div>
+        <div class="row justify-content-center align-content-center">
+            <div class="col-sm-12 col-md-12 col-lg-4">
+                <form method="post">
+                    <div asp-validation-summary="All" class="text">
 
-                        </div>
-                        <div class="mb-3">
-                            <label class="col-form-label" asp-for="mail"></label>
-                            <input type="text" asp-for="mail" class="form-control fadeIn second" placeholder="mail"/>
-                        </div>
-                        <div class="mb-3">
-                            <label class="col-form-label" asp-for="password"></label>
-                            <input asp-for="password" type="password" class="form-control fadeIn third" placeholder="password"/>
-                        </div>
-                        <div class="mb-3">
-                            <button type="submit" class="btn fadeIn fourth">Login</button>
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="col-form-label" asp-for="mail" />
+                        <input type="text" asp-for="mail" name="mail" class="form-control fadeIn second" placeholder="mail" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="col-form-label" asp-for="password" />
+                        <input asp-for="password" type="password" class="form-control fadeIn third" placeholder="password" />
+                    </div>
+                    <div class="mb-3">
+                        <input type="submit" class="fadeIn fourth" value="Login" />
+                    </div>
+                </form>
             </div>
         </div>
     </div>
 </div>
 
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
