--- a/WebAppVSEAT/Views/Login/IndexStaff.cshtml
+++ b/WebAppVSEAT/Views/Login/IndexStaff.cshtml
@@ -5,32 +5,36 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h1>Login Staff</h1>
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <h2 class="h2LogIn">Log in STAFF</h2>
+        <div class="row justify-content-center align-content-center">
+            <div class="col-sm-12 col-md-12 col-lg-4">
+                <form method="post">
+                    <div asp-validation-summary="All" class="text">
 
-<div class="container mt-5">
-    <div class="row justify-content-center align-content-center">
-        <div class="col-sm-12 col-md-12 col-lg-4">
-            <h1 class="mb-3">Login Staff</h1>
-            <form method="post">
-                <div asp-validation-summary="All" class="text">
-
-                </div>
-                <div class="mb-3">
-                    <label class="col-form-label" asp-for="MAILSTAFF">Mail</label>
-                    <input type="text" asp-for="MAILSTAFF" class="form-control" />
-                </div>
-                <div class="mb-3">
-                    <label class="col-form-label" asp-for="PASSWORDSTAFF">Password</label>
-                    <input type="text" asp-for="PASSWORDSTAFF" type="password" class="form-control" />
-                </div>
-                <div class="mb-3">
-                    <button type="submit" class="btn">Login</button>
-                </div>
-            </form>
+                    </div>
+                    <div class="mb-3">
+                        <label class="col-form-label" asp-for="MAILSTAFF" />
+                        <input type="text" asp-for="MAILSTAFF" name="MAILSTAFF" class="form-control fadeIn second" placeholder="mail" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="col-form-label" asp-for="PASSWORDSTAFF" />
+                        <input asp-for="PASSWORDSTAFF" type="password" class="form-control fadeIn third" placeholder="password" />
+                    </div>
+                    <div class="mb-3">
+                        <input type="submit" class="fadeIn fourth" value="Login" />
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
 
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
