--- a/WebAppVSEAT/Views/Restaurant/Details.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/Details.cshtml
@@ -2,48 +2,33 @@
 
 @{
     ViewData["Title"] = "Details";
-    var idRestaurant = 0;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    <link rel="stylesheet" href="~/css/dishes.css" />
+   /* var idRestaurant = 0;*/
 }
 
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.IDDISHES)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NAMEDISH)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PRICEDISH)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IDRESTAURANT)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            idRestaurant = item.IDRESTAURANT;
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IDDISHES)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NAMEDISH)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PRICEDISH)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IDRESTAURANT)
-                </td>
 
-            </tr>
-        }
-        @Html.ActionLink("TakeAnOrder", "TakeAnOrder", new { id = idRestaurant })
-    </tbody>
-</table>
+<h1>Their Best Dishes</h1>
+
+<div class="cards">
+    
+    @foreach (var item in Model)
+    {
+    <div class="cards__item">
+        <img src="~/Images/BurgerBackground.jpg" width="150px" height="150px" />
+
+        <h2>@Html.DisplayFor(modelItem => item.NAMEDISH)</h2>
+        <h3>@Html.DisplayFor(modelItem => item.PRICEDISH) chf</h3>
+        @Html.ActionLink("Order", "TakeAnOrder", new { id = item.IDRESTAURANT })
+    </div>
+    }
+
+</div>
+
+
+
+
+
+
+
