--- a/WebAppVSEAT/Views/Restaurant/TakeAnOrder.cshtml
+++ b/WebAppVSEAT/Views/Restaurant/TakeAnOrder.cshtml
@@ -88,7 +88,7 @@
         </tbody>
 
     </table>
-    <input type="submit" value="Confirm order" class="btn btn-primary" />
+    <input type="submit" value="Confirm order" />
     <br />
 
     @*<a asp-action="Index">confirm your order</a>*@
