--- a/WebAppVSEAT/Views/Shared/_Layout.cshtml
+++ b/WebAppVSEAT/Views/Shared/_Layout.cshtml
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WebApp  </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/Login.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/dishes.css" />
+    <link rel="stylesheet" href="~/css/Restaurant.css" />
 
-    
+
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <img src="~/Images/eat.jpg" class="eat_Image" alt="eat" style="position:relative; width:100px;">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebAppVSEAT</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -23,19 +22,20 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Restaurant" asp-action="Index">Restaurant</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Logout">Log out</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="CancelOrder">Cancel Order</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Orders">Current Orders</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark a-right" asp-area="" asp-controller="Login" asp-action="Logout">Log out</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark a-right" asp-area="" asp-controller="Customer" asp-action="Index">Profile</a>
                         </li>
                     </ul>
                 </div>
