--- a/WebAppVSEAT/Views/Shared/_LayoutLogin.cshtml
+++ b/WebAppVSEAT/Views/Shared/_LayoutLogin.cshtml
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - WebApp  </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/dishes.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/Login.css" />
 </head>
@@ -13,8 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <img src="~/Images/eat.jpg" class="eat_Image" alt="eat" style="position:relative; width:100px;">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">WebAppVSEAT</a>
+     
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Register" asp-action="Index">Sign-In</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="CreateCustomer">Sign-In</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="IndexStaff">Login Staff</a>
