--- a/WebAppVSEAT/wwwroot/css/dishes.css
+++ b/WebAppVSEAT/wwwroot/css/dishes.css
@@ -1,1 +1,31 @@
 ﻿
+.ImageDish {
+    height: 350px;
+    width: 350px;
+    background-size: 100% 100%;
+}
+
+#burger {
+}
+/*
+.container {
+    padding: 25px;
+    background-color: darkseagreen;
+    border-radius: 7px;
+}*/
+
+
+.cards {
+    display: flex;
+    /* Put a card in the next row when previous cards take all width */
+    flex-wrap: wrap;
+    margin-left: -8px;
+    margin-right: -8px;
+}
+
+.cards__item {
+    /* There will be 4 cards per row */
+    flex-basis: 25%;
+    padding-left: 8px;
+    padding-right: 8px;
+}
