error model, 30 minutes delivery cannot make it

--- a/WebAppVSEAT/Views/Order/ErrorNoCommand.cshtml
+++ b/WebAppVSEAT/Views/Order/ErrorNoCommand.cshtml
@@ -2,9 +2,9 @@
 
 @{
     ViewData["Title"] = "ErrorNoCommand";
-    Layout = "~/Views/Shared/_LayoutOrder.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>No Orders for the moment</h1>
+<h1>No command for the moment</h1>
 
 
