--- a/WebAppVSEAT/Views/Order/Orders.cshtml
+++ b/WebAppVSEAT/Views/Order/Orders.cshtml
@@ -2,8 +2,7 @@
 
 @{
     ViewData["Title"] = "Orders";
-    Layout = "_Layout";
-
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Orders</h1>
