--- a/WebAppVSEAT/Views/Order/OrdersStaff.cshtml
+++ b/WebAppVSEAT/Views/Order/OrdersStaff.cshtml
@@ -77,7 +77,7 @@
                 </td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.IDORDER })
-
+                    @Html.ActionLink("Archive", "Archive", new { id = item.IDORDER })
                 </td>
             </tr>
         }
