--- a/WebAppVSEAT/wwwroot/css/Restaurant.css
+++ b/WebAppVSEAT/wwwroot/css/Restaurant.css
@@ -7,6 +7,8 @@
     column-gap: 1rem;
     /* Misc */
     width: 100%;
+
+    
 }
 
 .masonry-grid__item {
@@ -14,6 +16,10 @@
     break-inside: avoid;
     /* Misc */
     margin-bottom: 1rem;
+    background-color: gainsboro;
+    text-align: center;
+
+       
 }
 
 
